style.css
/*
Theme Name: 200 Orphanages
Description: Custom WordPress theme for 200 Orphanages Worldwide
Authors: Anthony Keller, Jacob Bower, Eric Willis, Laura Anderson
*/

/* - - - - RESETS - - - - */
body, body * {
  margin: 0;
  padding: 0;
}
a img {
  border: none;
}
a:link, a:visited {
  text-decoration: none;
  color:#3567b2;
}
a:focus, a:hover{
  color: #fbaa1f;
  text-decoration:underline;
}
ul, ol {
  list-style-type: none;
}
/* - - - - GRID - - - - */
*,
*:after,
*:before {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
img {
    width: auto;
    max-width: 100%;
    height: auto !important;
}
.wrapper {
    max-width: 940px;
    width: 100%;
    padding: 0 1em 20px 1em;
    margin: 0 auto;
}
.wrapper:after,
.row:after {
    content: "";
    display: table;
    clear: both;
}
[class*='column-'] {
    float: left;
    padding: 1em;
    width: 100%;
    min-height: 1px;
}
.no-pad-left {
  padding-left: 0;
}
.no-pad-right {
  padding-right: 0;
}
.center {
  padding-left: .5em;
  padding-right: .5em;
}
/* ============= GLOBAL ============= */
body {
  font-family: 'Helvetica', 'Arial', 'sans-serif';
}
header {
  display:block;
  background: #434343;
  width: 100%;
  height:auto;
  margin: 0 auto;
  -webkit-box-shadow: 0 4px 14px 0 rgba(0,0,0,0.75);
  -moz-box-shadow: 0 4px 14px 0 rgba(0,0,0,0.75);
  box-shadow: 0 3px 17px 0 rgba(0,0,0,0.75);
  z-index:10;
}
h1 {
  font-size: 2em;
  padding-top: 1em;
}
p {
  font-size: 1em;
  padding: 1em 0;
  line-height: 1.25;
  color: #595959;
  font-family:Arial, Helvetica, sans-serif;
}
blockquote {
  font-size:.85em;
  font-style:italic;
  color:#939393;
  padding: 0 1em;
}
.yellow {
  background-color:#fbaa1f;
}
.blue {
  background-color:#3567b2;
}
.red {
  background-color:#c5483c;
}
.clearfix {
  clear: both;
}
/* ============= HEADER ============= */
.header-wrapper {
  max-width: 960px;
  padding: 0 20px;
  margin: 0 auto;
  position:relative;
  height:100px;
  margin: 0 auto;
}
.header-left {
  float: left;
  width: 45%;
  padding: 0 1em 0 0;
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  transform: translateY(-50%);
}
img.logo {
  max-width: 210px;
  height: auto;
}
.header-right {
  float: right;
  width: 100%;
  padding: 0;
}
.share-buttons {
  display: none;
}
.hidden {
  display:none;
}
.header-nav {
  clear:both;
}
.header-nav ul li {
  float: none;
  padding: 15px;
  border-top: 1px solid #999;
  margin: 0;
  text-align: center;
}
.header-nav ul li a {
  display: block;
  color: #fff;
}
.header-nav ul li a:hover{
  color: #fbaa1f;
  display: block;
}
.header-nav ul .current_page_item a{
  color: #fbaa1f;
}
.responsive-menu-wrapper {
  float: right;
  width: 50px;
  height: 105px;
}
.responsive-menu-img {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  transform: translateY(-50%);
}
.menu ul li {
  font-size:2em;
  text-align:center;
}
.menu ul li:last-child {
  margin-bottom:10px;
}
/* ============= CONTENT =============  */
.content {
  width: 100%;
  margin: 0 auto;
  z-index:10;
  padding-top: 20px;
}
.content-section {
  padding: 1em 0;
}
.current-projects {
  padding-bottom: 0;
}
.current-projects .section-left {
  width: 50%;
  padding-right: .5em;
}
.current-projects .section-right {
  width: 50%;
  padding-left: .5em;
}
.current-projects img {
  width: 100%;
  height: auto;
  margin: 5px 0 0 0;
}
.blog-post-section {
  display: none;
}
/* ============= CONTENT SLIDER ============= */
#main-content-slider {
  margin-top: 1em;
  padding-bottom: .5em;
}
#main-content-slider .item img{
  display: block;
  width: 100%;
  height: auto;
}
/* ============= SLIDER CAPTIONS ============= */
.item {
  position:relative;
}
.banner-caption {
  position:absolute;
  width:auto;
  height:auto;
  background-color:black;
  opacity:0.6;
  border-radius:10px;
  color:white;
  font-size: .75em;
  padding: 5px 20px;
  line-height: 1.4;
}
.banner-caption.top-left {
  left: 1em;
  top: 1em;
}
.banner-caption.top-right {
  right: 1em;
  top: 1em;
}
.banner-caption.bottom-left {
  left: 1em;
  bottom: 1em;
}
.banner-caption.bottom-right {
  right: 1em;
  bottom: 1em;
}
/* ============= BUTTON STYLES ============= */
a.button-small {
  display: block;
  clear: both;
  width: 120px;
  height: 30px;
  text-align: center;
  line-height: 30px;
  color: #FFF;
  background-color:#3567b2;
  border-radius: 10px;
  -webkit-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  -moz-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
}
a.button-small:hover,
a.button-small:focus {
  background-color: #fbaa1f;
}
.button-large:link, .button-large:visited {
  display: block;
  width: 150px;
  height: 40px;
  margin-top: 1em;
  text-align: center;
  line-height: 40px;
  color: #FFF;
  background-color:#c5483c;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  -moz-box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
  box-shadow: 10px 10px 17px -2px rgba(0,0,0,0.75);
}
.button-large:hover,
.button-large:focus {
  background-color: #fbaa1f;
}
.blog-section .button-small {
  float: right;
}
.blog-post .button-small {
  float: right;
}
/* ============= PAGE CONTENT ============= */
.single-share li{
  display: inline-block;
  text-align: center;
  border:1px solid #CC9;
  border-radius: 2px;
  list-style-type: none;
  padding: 3px 10px;
  margin: 15px 10px 10px 0;
  text-decoration: none;
}
.pad-bottom {
  padding-bottom: 1em;
}
.border-bottom {
  border-bottom: solid 1px #999;
}
.mission-statement {
  padding-bottom: 0;
  padding-top: 0;
}
.leader-wrap,
.event-wrap {
  padding: 0;
}
/* ... */

